Fix 404 background image distortion at mobile and tablet

--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -4479,7 +4479,9 @@ section.donation {
 
 .site-main .error-404 {
   background: linear-gradient(to bottom, rgba(66, 99, 171, 0.7) 0%, rgba(66, 99, 171, 0.7) 100%), url("../../assets/images/404_page_background.jpg") center center/100% 100% no-repeat;
-  height: 961px;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
   width: 100%;
   display: -ms-flexbox;
   display: flex;
